Added support for CoffeeScript

--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>GeoTown</title>
+        <script src="js/test.js"></script>
     </head>
     <body>
         <h1>Hi!</h1>
