--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>GeoTown</title>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
         <script src="js/test.js"></script>
     </head>
     <body>
