--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="geotownApp">
     <head>
+        <meta charset="utf-8" />
         <title>GeoTown</title>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
-        <script src="js/test.js"></script>
+        <script src="js/main.js"></script>
+        <script src="https://apis.google.com/js/client.js?onload=init"></script>
     </head>
-    <body>
-        <h1>Hi!</h1>
+    <body >
+        <div ng-controller="GeotownAppCtrl" class="container" ng-show="is_backend_ready">
+            <h1>Hi!</h1>
+        </div>
     </body>
 </html>
