Implemented auth flow.

--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <body >
         <div ng-controller="GeotownAppCtrl" class="container" ng-show="is_backend_ready">
             <h1>Hi!</h1>
+            <a href="#" ng-click="login()">Login</a>
         </div>
     </body>
 </html>
