--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -27,9 +27,7 @@
             <div class="container" ng-show="isBackendReady">
                 <h1>GeoTown</h1>
                 <a href="#" ng-click="login()" ng-show="!loggedIn">Login</a>
-                <div class="row">
-                    <div class="col-md-2" ui-view>
-                    </div>
+                <div class="row" ui-view>
                 </div>
 
             </div>
