--- a/geotown.server-war/src/main/webapp/routes.html
+++ b/geotown.server-war/src/main/webapp/routes.html
@@ -1,7 +1,10 @@
-<a href="#" ng-click="showCreateRouteModal()" class="btn">Create Route</a>
-<ul class="nav nav-pills nav-stacked">
-    <li ui-sref-active="active" ng-repeat="route in routes">
-        <a ui-sref="routes.detail({id: route.id})">{{route.name}}</a>
-    </li>
-</ul>
-<div ui-view></div>
+<div class="col-md-2">
+    <a href="#" ng-click="showCreateRouteModal()" class="btn btn-primary">Create Route</a>
+    <ul class="nav nav-pills nav-stacked">
+        <li ui-sref-active="active" ng-repeat="route in routes">
+            <a ui-sref="routes.detail({id: route.id})">{{route.name}}</a>
+        </li>
+    </ul>
+</div>
+
+<div class="col-md-10" ui-view></div>
