Added Map (for science).

--- a/geotown.server-war/src/main/webapp/routes.detail.html
+++ b/geotown.server-war/src/main/webapp/routes.detail.html
@@ -7,7 +7,7 @@
             Please select one of your routes on the left. If you don't have one, create one!
         </div>
         <div ng-show="route != null">
-            Peda.
+            <google-map draggable="true" center="map.center" zoom="map.zoom"></google-map>
         </div>
     </div>
  </div>
