--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
 
         <title>GeoTown</title>
+        <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDtIvdEIVz0SU6K1DJ_cZ2L6Cb6XfRLAaE&sensor=FALSE'></script>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
-        <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
         <script src="/js/libs/lodash/dist/lodash.min.js"></script>
         <script src="/js/libs/angular-google-maps/dist/angular-google-maps.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
@@ -21,6 +21,7 @@
 
         <style>
             .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+            .angular-google-map-container { height: 400px; }
         </style>
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css" />
