--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -31,8 +31,8 @@
         <div ng-controller="GeotownAppCtrl" class="container">
             <div class="container" ng-show="isBackendReady">
                 <h1>GeoTown</h1>
-                <a href="#" ng-click="login()" ng-show="!loggedIn">Login</a>
-                <div class="row" ui-view>
+                <a ng-click="login()" class="btn btn-primary" ng-show="!$root.loggedIn">Login</a>
+                <div class="row" ng-show="$root.loggedIn" ui-view>
                 </div>
 
             </div>
