Showing progress indicator at every device.

--- a/geotown.server-war/src/main/webapp/routes.detail.html
+++ b/geotown.server-war/src/main/webapp/routes.detail.html
@@ -1,4 +1,5 @@
 <div class="panel panel-primary">
+    <div cg-busy="routePromise"></div>
     <div class="panel-heading" ng-show="route != null">
         <h3 class="panel-title">{{route.name}}</h3>
     </div>
