--- a/geotown.server-war/src/main/webapp/createRouteModal.html
+++ b/geotown.server-war/src/main/webapp/createRouteModal.html
@@ -2,6 +2,7 @@
     <h3 class="modal-title">Create a Route.</h3>
 </div>
 <div class="modal-body">
+    <div cg-busy="creationPromise"></div>
     <input type="text" ng-model="data.name" placeholder="Name" /><br />
     <input type="text" ng-model="data.latitude" placeholder="lat" /><br />
     <input type="text" ng-model="data.longitude" placeholder="lng" /><br />
