--- a/geotown.server-war/src/main/webapp/routes.html
+++ b/geotown.server-war/src/main/webapp/routes.html
@@ -1,4 +1,5 @@
 <div class="col-md-2">
+    <div cg-busy="routesPromise"></div>
     <a href="#" ng-click="showCreateRouteModal()" class="btn btn-primary">Create Route</a>
     <ul class="nav nav-pills nav-stacked">
         <li ui-sref-active="active" ng-repeat="route in routes">
