--- a/geotown.server-war/src/main/webapp/createWaypointModal.html
+++ b/geotown.server-war/src/main/webapp/createWaypointModal.html
@@ -3,9 +3,20 @@
 </div>
 <div class="modal-body">
     <div cg-busy="creationPromise"></div>
-    <input type="text" ng-model="data.question" placeholder="Question" /><br />
-    <input type="text" ng-model="data.latitude" placeholder="lat" /><br />
-    <input type="text" ng-model="data.longitude" placeholder="lng" /><br />
+    <form role="form">
+        <div class="form-group">
+            <label for="question">Question</label>
+            <input type="text" class="form-control" id="question" ng-model="data.question" placeholder="Question" />
+        </div>
+        <div class="form-group">
+            <label for="google_places_ac">Location</label>
+            <google-places location="data" class="form-control" type="">
+            </google-places>
+        </div>
+    </form>
+    <google-map refresh="map.refresh" draggable="true" center="data" zoom="map.zoom"  options="map.options">
+        <marker coords="data"></marker>
+    </google-map>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Create</button>
