--- a/geotown.server-war/src/main/webapp/createWaypointModal.html
+++ b/geotown.server-war/src/main/webapp/createWaypointModal.html
@@ -14,9 +14,11 @@
             </google-places>
         </div>
     </form>
-    <google-map refresh="map.refresh" draggable="true" center="data" zoom="map.zoom"  options="map.options">
-        <marker coords="data"></marker>
-    </google-map>
+    <div ng-if="showMap">
+        <google-map refresh="map.refresh" draggable="true" center="data" zoom="map.zoom"  options="map.options">
+            <marker coords="data"></marker>
+        </google-map>
+    </div>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Create</button>
