--- a/geotown.server-war/src/main/webapp/createWaypointModal.html
+++ b/geotown.server-war/src/main/webapp/createWaypointModal.html
@@ -9,6 +9,12 @@
             <input type="text" class="form-control" id="question" ng-model="data.question" placeholder="Question" />
         </div>
         <div class="form-group">
+            <input type="text" placeholder="Answer" ng-enter="addAnswer(text)" ng-model="text" />
+            <ul>
+                <li ng-repeat="a in data.answers">{{a}}</li>
+            </ul>
+        </div>
+        <div class="form-group">
             <label for="google_places_ac">Location</label>
             <google-places location="data" class="form-control" type="">
             </google-places>
