--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -42,8 +42,8 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css" />
     </head>
-    <body >
-        <div ng-controller="GeotownAppCtrl" class="container">
+    <body>
+        <div ng-controller="GeotownAppCtrl">
             <div class="container" ng-show="isBackendReady">
                 <h1>GeoTown</h1>
                 <a ng-click="login()" class="btn btn-primary" ng-show="!$root.loggedIn">Login</a>
