--- a/geotown.server-war/src/main/webapp/routes.detail.html
+++ b/geotown.server-war/src/main/webapp/routes.detail.html
@@ -1,5 +1,6 @@
 <div class="panel panel-primary">
     <div cg-busy="routePromise"></div>
+    <div cg-busy="waypointsPromise"></div>
     <div class="panel-heading" ng-show="route != null">
         <h3 class="panel-title">
             {{route.name}}
@@ -13,7 +14,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <google-map draggable="true" center="map.center" zoom="map.zoom">
-                        <marker ng-repeat="w in route.waypoints" coords="w" click="onMarkerClicked(w)">
+                        <marker ng-repeat="w in waypoints" coords="w" click="onMarkerClicked(w)">
                             <window show="m.showWindow" closeClick="closeClick()" ng-cloak>
                                 <div>
                                     <strong>Waypoint.</strong><br />
@@ -35,7 +36,7 @@
                         </div>
                         <div class="panel-body">
                             <div class="list-group">
-                                <a ng-click="selectWaypoint(w)" ng-class="{active: selectedWaypoint == w}" class="list-group-item" ng-repeat="w in route.waypoints">{{w.question}}</a>
+                                <a ng-click="selectWaypoint(w)" ng-class="{active: selectedWaypoint == w}" class="list-group-item" ng-repeat="w in waypoints">{{w.question}}</a>
                             </div>
                         </div>
                     </div>
