--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -12,6 +12,7 @@
         <script src="/js/libs/lodash/dist/lodash.min.js"></script>
         <script src="/js/libs/angular-google-maps/dist/angular-google-maps.min.js"></script>
         <script src="/js/libs/angular-busy/dist/angular-busy.min.js"></script>
+        <script src="/js/libs/angular-loading-bar/build/loading-bar.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
@@ -38,6 +39,7 @@
             }​
         </style>
 
+        <link rel="stylesheet" href="/js/libs/angular-loading-bar/build/loading-bar.min.css" />
         <link rel="stylesheet" href="/js/libs/angular-busy/dist/angular-busy.min.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css" />
