--- a/geotown.server-war/src/main/webapp/routes.html
+++ b/geotown.server-war/src/main/webapp/routes.html
@@ -4,7 +4,7 @@
         <div class="panel-heading clearfix">
             <h3 class="panel-title">My Routes
                 <div class="pull-right">
-                    <a ng-click="showCreateRouteModal()" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                    <a ng-click="showCreateRouteModal()" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-plus-sign"></span></a>
                 </div>
             </h3>
         </div>
