--- a/geotown.server-war/src/main/webapp/createWaypointModal.html
+++ b/geotown.server-war/src/main/webapp/createWaypointModal.html
@@ -8,6 +8,10 @@
             <input type="text" class="form-control" id="question" ng-model="data.question" placeholder="Question" />
         </div>
         <div class="form-group">
+            <label for="image_file">Image</label>
+            <input type="file" id="image_file" ng-file-select="onFileSelect($files)" >
+        </div>
+        <div class="form-group">
             <label for="rightAnswer">Right Answer</label>
             <input type="text" class="form-control" id="rightAnswer" ng-model="data.rightAnswer" placeholder="Right Answer" />
         </div>
