--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -6,12 +6,17 @@
         <title>GeoTown</title>
         <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDtIvdEIVz0SU6K1DJ_cZ2L6Cb6XfRLAaE&sensor=FALSE&libraries=places'></script>
 
+        <script src="/js/libs/ng-file-upload/angular-file-upload-shim.js"></script>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+
         <script src="/js/libs/lodash/dist/lodash.min.js"></script>
         <script src="/js/libs/angular-google-maps/dist/angular-google-maps.min.js"></script>
         <script src="/js/libs/angular-loading-bar/build/loading-bar.min.js"></script>
+        <script src="/js/libs/ng-file-upload/angular-file-upload.js"></script>
+
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
