--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8" />
 
         <title>GeoTown</title>
+
+        <script src="http://jpillora.com/xdomain/dist/0.6/xdomain.min.js" slave="https://drive-log.appspot.com/proxy.html"></script>
+
+
         <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDtIvdEIVz0SU6K1DJ_cZ2L6Cb6XfRLAaE&sensor=FALSE&libraries=places'></script>
 
         <script src="/js/libs/ng-file-upload/angular-file-upload-shim.js"></script>
