Fixed https bug.

--- a/geotown.server-war/src/main/webapp/proxy.html
+++ b/geotown.server-war/src/main/webapp/proxy.html
@@ -1,2 +1,2 @@
 <!DOCTYPE HTML>
-<script src="http://jpillora.com/xdomain/dist/0.6/xdomain.min.js" master="http://geotown.de"></script>
+<script src="https://rawgit.com/jpillora/xdomain/gh-pages/dist/0.6/xdomain.js" master="http://geotown.de"></script>
