Disabling the iFrame proxy for now.

--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 
         <title>GeoTown</title>
 
-        <script src="https://rawgit.com/jpillora/xdomain/gh-pages/dist/0.6/xdomain.js" slave="https://drive-log.appspot.com/proxy.html"></script>
+        <!--<script src="https://rawgit.com/jpillora/xdomain/gh-pages/dist/0.6/xdomain.js" slave="https://drive-log.appspot.com/proxy.html"></script>-->
 
 
         <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyDtIvdEIVz0SU6K1DJ_cZ2L6Cb6XfRLAaE&sensor=FALSE&libraries=places'></script>
