Switch to bootstrap Material Design

--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -20,6 +20,8 @@
         <script src="/js/libs/angular-google-maps/dist/angular-google-maps.min.js"></script>
         <script src="/js/libs/angular-loading-bar/build/loading-bar.min.js"></script>
         <script src="/js/libs/ng-file-upload/angular-file-upload.js"></script>
+        <script src="/js/libs/bootstrap-material-design/scripts/ripples.js"></script>
+        <script src="/js/libs/bootstrap-material-design/scripts/material.js"></script>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap.min.js"></script>
@@ -49,7 +51,8 @@
 
         <link rel="stylesheet" href="/js/libs/angular-loading-bar/build/loading-bar.min.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css" />
+        <link rel="stylesheet" href="/js/libs/bootstrap-material-design/css-compiled/ripples.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="/js/libs/bootstrap-material-design/css-compiled/material-wfont.min.css" rel="stylesheet" />
     </head>
     <body>
         <div ng-controller="GeotownAppCtrl">
