--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -57,7 +57,13 @@
     <body>
         <div ng-controller="GeotownAppCtrl">
             <div class="container" ng-show="isBackendReady">
-                <h1>GeoTown</h1>
+                <h1>GeoTown
+                    <a class="pull-right" href="https://play.google.com/store/apps/details?id=de.happycarl.geotown.app">
+                        <img alt="Get it on Google Play"
+                             src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+                    </a>
+                </h1>
+
                 <a ng-click="login()" class="btn btn-primary" ng-show="!$root.loggedIn">Login</a>
                 <div class="row" ng-show="$root.loggedIn" ui-view>
                 </div>
