--- a/geotown.server-war/src/main/webapp/createRouteModal.html
+++ b/geotown.server-war/src/main/webapp/createRouteModal.html
@@ -1,16 +1,20 @@
-<form role="form" name="routeForm" ng-submit="ok(routeForm)" novalidate>
+<form role="form" name="routeForm" ng-submit="ok(routeForm)" novalidate class="form-horizontal">
     <div class="modal-header">
         <h3 class="modal-title">Create a Route.</h3>
     </div>
     <div class="modal-body">
         <div class="form-group" ng-class="{'has-error': routeForm.name.$invalid, 'has-success': !routeForm.name.$invalid}">
-            <label for="name">Name</label>
-            <input type="text" name="name" class="form-control" ng-model="data.name" placeholder="Enter a Name" id="name" required ng-minlength="3" />
+            <label for="name" class="col-lg-2 control-label">Name</label>
+            <div class="col-lg-10">
+                <input type="text" name="name" class="form-control" ng-model="data.name" placeholder="Enter a Name" id="name" required ng-minlength="3" />
+            </div>
         </div>
         <div class="form-group">
-            <label for="google_places_ac">Location</label>
-            <google-places location="data" class="form-control" type="(cities)">
-            </google-places>
+            <label for="google_places_ac" class="col-lg-2 control-label">Location</label>
+            <div class="col-lg-10">
+                <google-places location="data" class="form-control" type="(cities)">
+                </google-places>
+            </div>
         </div>
         <div ng-if="showMap">
             <google-map refresh="map.refresh" draggable="true" center="data" zoom="map.zoom"  options="map.options">
