--- a/geotown.server-war/src/main/webapp/routes.html
+++ b/geotown.server-war/src/main/webapp/routes.html
@@ -1,11 +1,9 @@
 <div class="col-md-3">
     <div class="panel panel-primary">
         <div cg-busy="routesPromise"></div>
-        <div class="panel-heading clearfix">
+        <div class="panel-heading">
             <h3 class="panel-title">My Routes
-                <div class="pull-right">
-                    <a ng-click="showCreateRouteModal()" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                </div>
+            <a ng-click="showCreateRouteModal()" class="btn btn-xs btn-success pull-right"><span class="glyphicon glyphicon-plus-sign"></span></a>
             </h3>
         </div>
         <div class="panel-body">
