--- a/geotown.server-war/src/main/webapp/createWaypointModal.html
+++ b/geotown.server-war/src/main/webapp/createWaypointModal.html
@@ -1,31 +1,41 @@
-<form role="form" name="waypointForm" ng-submit="ok(waypointForm)" novalidate>
+<form role="form" name="waypointForm" ng-submit="ok(waypointForm)" class="form-horizontal" novalidate>
     <div class="modal-header">
         <h3 class="modal-title">Create a Waypoint.</h3>
     </div>
     <div class="modal-body">
         <div class="form-group" ng-class="{'has-error': waypointForm.question.$invalid, 'has-success': !waypointForm.question.$invalid}">
-            <label for="question">Question</label>
-            <input type="text" name="question" class="form-control" id="question" ng-model="data.question" placeholder="Question" required ng-minlength="3" />
+            <label for="question" class="col-lg-2 control-label">Question</label>
+            <div class="col-lg-10">
+                <input type="text" name="question" class="form-control" id="question" ng-model="data.question" placeholder="Question" required ng-minlength="3" />
+            </div>
         </div>
         <div class="form-group">
-            <label for="image_file">Image</label>
-            <input type="file" name="image_file" id="image_file" ng-file-select="onFileSelect($files)" />
+            <label for="image_file" class="col-lg-2 control-label">Image</label>
+            <div class="col-lg-10">
+                <input type="file" name="image_file" id="image_file" ng-file-select="onFileSelect($files)" />
+            </div>
         </div>
         <div class="form-group" ng-class="{'has-error': waypointForm.rightAnswer.$invalid, 'has-success': !waypointForm.rightAnswer.$invalid}">
-            <label for="rightAnswer">Right Answer</label>
-            <input type="text" name="rightAnswer" class="form-control" id="rightAnswer" ng-model="data.rightAnswer" placeholder="Right Answer" required />
+            <label for="rightAnswer" class="col-lg-2 control-label">Right Answer</label>
+            <div class="col-lg-10">
+                <input type="text" name="rightAnswer" class="form-control" id="rightAnswer" ng-model="data.rightAnswer" placeholder="Right Answer" required />
+            </div>
         </div>
         <div class="form-group">
-            <label for="wrongAnswer">Wrong Answers</label>
-            <input type="text" id="wrongAnswer" class="form-control" placeholder="Press Enter to add." ng-enter="addWrongAnswer(text)" ng-model="text" />
+            <label for="wrongAnswer" class="col-lg-2 control-label">Wrong Answers</label>
+            <div class="col-lg-10">
+                <input type="text" id="wrongAnswer" class="form-control" placeholder="Press Enter to add." ng-enter="addWrongAnswer(text)" ng-model="text" />
+            </div>
             <ul class="list-group">
                 <li ng-repeat="a in data.wrongAnswers" class="list-group-item">{{a}}</li>
             </ul>
         </div>
         <div class="form-group">
-            <label for="google_places_ac">Location</label>
-            <google-places location="data" class="form-control" type="">
-            </google-places>
+            <label for="google_places_ac" class="col-lg-2 control-label">Location</label>
+            <div class="col-lg-10">
+                <google-places location="data" class="form-control" type="">
+                </google-places>
+            </div>
         </div>
         <div ng-if="showMap">
             <google-map refresh="map.refresh" draggable="true" center="data" zoom="map.zoom"  options="map.options">
