--- a/geotown.server-war/src/main/webapp/createWaypointModal.html
+++ b/geotown.server-war/src/main/webapp/createWaypointModal.html
@@ -26,9 +26,15 @@
             <div class="col-lg-10">
                 <input type="text" id="wrongAnswer" class="form-control" placeholder="Press Enter to add." ng-enter="addWrongAnswer(text)" ng-model="text" />
             </div>
-            <ul class="list-group">
-                <li ng-repeat="a in data.wrongAnswers" class="list-group-item">{{a}}</li>
-            </ul>
+            <div class="list-group">
+                <div ng-repeat="a in data.wrongAnswers" class="list-group-item">
+                    <div class="row-content">
+                        <div class="list-group-item-heading">
+                            {{a}}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="form-group">
             <label for="google_places_ac" class="col-lg-2 control-label">Location</label>
