--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -45,6 +45,9 @@
             .modal-backdrop{
                 z-index: 10;
             }​
+            .panel-title .btn {
+                margin-top: -8px;
+            }
         </style>
 
         <link rel="stylesheet" href="/js/libs/angular-loading-bar/build/loading-bar.min.css" />
