--- a/geotown.server-war/src/main/webapp/index.html
+++ b/geotown.server-war/src/main/webapp/index.html
@@ -45,7 +45,7 @@
             .modal-backdrop{
                 z-index: 10;
             }​
-            .panel-title .btn {
+            .panel-title a {
                 margin-top: -8px;
             }
         </style>
