--- a/geotown.server-war/src/main/webapp/routes.detail.html
+++ b/geotown.server-war/src/main/webapp/routes.detail.html
@@ -33,7 +33,7 @@
                                 </div>
                             </h3>
                         </div>
-                        <div class="panel-body">
+                        <div class="panel-body" style="height: 350px; overflow-y: auto; overflow-wrap: break-word; width: 100%">
                             <ul class="nav nav-pills nav-stacked">
                                 <li ng-class="{active: selectedWaypoint == w}" ng-repeat="w in waypoints"><a ng-click="selectWaypoint(w)">{{w.question}}</a></li>
                             </ul>
